--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,11 +23,13 @@ jobs:
 
       - name: Prisma Cloud image scan
         id: scan
-        uses: paloaltonetworks/prisma-cloud-scan@master
+        uses: PaloAltoNetworks/prisma-cloud-scan@v1
         if: always()
       
         with:
-          token: ${{ secrets.PRISMA_CLOUD_TOKEN }}
+          pcc_console_url: ${{ secrets.PCC_CONSOLE_URL }}
+          pcc_user: ${{ secrets.PCC_USER }}
+          pcc_pass: ${{ secrets.PCC_PASS }}
           image_name: ${{ env.IMAGE_NAME }}
 
       # (Optional) for compatibility with GitHub's code scanning alerts
