--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,8 @@ jobs:
       
         with:
           pcc_console_url: ${{ secrets.PCC_CONSOLE_URL }}
-          pcc_token: ${{ secrets.PRISMA_CLOUD_TOKEN }}
+          pcc_user: ${{ secrets.PCC_USER }}
+          pcc_pass: ${{ secrets.PCC_PASS }}
           image_name: ${{ env.IMAGE_NAME }}
 
       # (Optional) for compatibility with GitHub's code scanning alerts
