--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 on: [ push, workflow_dispatch ]
 
 env:
-  IMAGE_NAME: ${{ github.repository }}:${{ github.sha }}
+  IMAGE_NAME: ${{ github.repository }}:latest
   
 permissions:
     id-token: write
