--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,8 @@ jobs:
           pcc_user: ${{ secrets.PCC_USER }}
           pcc_pass: ${{ secrets.PCC_PASS }}
           image_name: ${{ env.IMAGE_NAME }}
+     # - name: Prisma Cloud image scans
+     #   run: json-to-sarif input.json output.sarif
 
       # (Optional) for compatibility with GitHub's code scanning alerts
       - name: Upload SARIF file
