--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,11 +35,11 @@ jobs:
           pcc_pass: ${{ secrets.PCC_PASS }}
           image_name: ${{ env.IMAGE_NAME }}
      # - name: Prisma Cloud image scans
-     #   run: json-to-sarif input.json output.sarif
+     #   run: json-to-sarif pcc_scan_results.json pcc_scan_results.sarif
 
       # (Optional) for compatibility with GitHub's code scanning alerts
       - name: Upload SARIF file
         if: ${{ always() }} # necessary if using failure thresholds in the image scan
         uses: github/codeql-action/upload-sarif@v2
         with:
-          sarif_file: ${{ steps.scan.outputs.sarif_file }}
+          sarif_file: pcc_scan_results.sarif
