--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,13 +34,16 @@ jobs:
           pcc_user: ${{ secrets.PCC_USER }}
           pcc_pass: ${{ secrets.PCC_PASS }}
           image_name: ${{ env.IMAGE_NAME }}
+          
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 14
+          node-version: 14'
+        if: always()
 
       - name: Install dependencies
         run: npm install sarif
+        if: always()
 
       - name: Convert JSON to SARIF
         run: node convert.js pcc_scan_results.json pcc_scan_results.sarif
