--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,18 +35,16 @@ jobs:
           pcc_pass: ${{ secrets.PCC_PASS }}
           image_name: ${{ env.IMAGE_NAME }}
           
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 14'
-        if: always()
-
-      - name: Install dependencies
-        run: npm install sarif
-        if: always()
-
       - name: Convert JSON to SARIF
-        run: node convert.js pcc_scan_results.json pcc_scan_results.sarif
+        uses: garethr/snyk-to-sarif@master
+        with:
+          json: true
+        if: always()
+          
+      - name: Upload SARIF file
+        uses: github/codeql-action/upload-sarif@v1
+        with:
+          sarif_file: snyk.sarif
           
      
       # (Optional) for compatibility with GitHub's code scanning alerts
