--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,15 +36,12 @@ jobs:
           image_name: ${{ env.IMAGE_NAME }}
           
       - name: Convert JSON to SARIF
-        uses: garethr/snyk-to-sarif@master
-        with:
-          json: true
-        if: always()
-          
-      - name: Upload SARIF file
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: snyk.sarif
+        run: |
+          # Install the required dependencies
+           npm install -g json-to-sarif  
+
+          # Convert the JSON file to SARIF
+          json-to-sarif --input pcc_scan_results.json --output pcc_scan_results.sarif
         if: always()
           
      
