--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
           git clone https://github.com/github/sarif-conversion-tool.git
           cd sarif-conversion-tool
           npm install
+        if: always()
 
       - name: Convert JSON to SARIF
         run: |
