--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,10 +35,18 @@ jobs:
           pcc_pass: ${{ secrets.PCC_PASS }}
           image_name: ${{ env.IMAGE_NAME }}
           
-     
-      # (Optional) for compatibility with GitHub's code scanning alerts
-      - name: Upload SARIF file
-        if: ${{ always() }} # necessary if using failure thresholds in the image scan
-        uses: github/codeql-action/upload-sarif@v2
+      - name: Download JSON file
+        uses: actions/download-artifact@v2
         with:
-          sarif_file: pcc_scan_results.json
+          name: json-file
+        if: always()
+      - name: Convert JSON to SARIF
+        uses: garethr/snyk-to-sarif@master
+        with:
+          json: true
+        if: always()
+      - name: Upload SARIF file
+        uses: github/codeql-action/upload-sarif@v1
+        with:
+          sarif_file: snyk.sarif
+        if: always()
