--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
         with:
           name: Test Results
           path: ${{ steps.scan.outputs.sarif_file }}
+        if: always()
           
           
 #In this example, the GitHub Actions 
