--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,22 +35,13 @@ jobs:
           pcc_pass: ${{ secrets.PCC_PASS }}
           image_name: ${{ env.IMAGE_NAME }}
           
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: Test Results
-          path: ${{ steps.scan.outputs.sarif_file }}
-        if: always()
-          
           
 #In this example, the GitHub Actions 
-      #- name: Upload SARIF reports to GitHub Security tab
-      #uses: github/codeql-action/upload-sarif@v2
-      #  if: ${{ always() }}
-      #  with:
-      #    sarif_file: ${{ steps.scan-to-sarif.outputs.sarif-report-path }}
-     
-          #sarif_file: ${{ steps.scan.outputs.sarif_file }}
+      - name: Upload SARIF reports to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v1
+        if: ${{ always() }}
+         with:
+        sarif_file: ${{ steps.scan.outputs.sarif_file }}
      
        
        
