--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,9 +39,9 @@ jobs:
 #In this example, the GitHub Actions 
       - name: Upload SARIF reports to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v1
-        if: ${{ always() }}
-         with:
-        sarif_file: ${{ steps.scan.outputs.sarif_file }}
+        if: always()
+        with:
+         sarif_file: ${{ steps.scan.outputs.sarif_file }}
      
        
        
