--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,12 +41,17 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install json
           pip install re
           pip install sys
         if: always()
       - name: Run Python script
         run: python parser.py  ${{ steps.scan.outputs.sarif_file }} >> ${{ steps.scan.outputs.sarif_file }}
+        if: always()
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: My Artifact
+          path: ${{ steps.scan.outputs.sarif_file }}
         if: always()
           
           
