--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,29 +38,17 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.11
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install re
-          pip install sys
         if: always()
       - name: Run Python script
         run: python parser.py  ${{ steps.scan.outputs.sarif_file }} >> ${{ steps.scan.outputs.sarif_file }}
         if: always()
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: My Artifact
-          path: ${{ steps.scan.outputs.sarif_file }}
+ 
+     #In this example, the GitHub Actions 
+      - name: Upload SARIF reports to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v1
         if: always()
-          
-          
-#In this example, the GitHub Actions 
-   #   - name: Upload SARIF reports to GitHub Security tab
-  #      uses: github/codeql-action/upload-sarif@v1
-   #     if: always()
-  #      with:
-  #       sarif_file: ${{ steps.scan.outputs.sarif_file }}
+        with:
+         sarif_file: ${{ steps.scan.outputs.sarif_file }}
      
        
        
