--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -1,25 +1,32 @@
-name: tfsec
+name: Terraform Security Scan
+
 on:
   push:
     branches:
       - main
-  pull_request:
+      # Add other branches if needed
+
 jobs:
   tfsec:
-    name: tfsec sarif report
+    name: Tfsec Security Scan
     runs-on: ubuntu-latest
 
     steps:
-      - name: Clone repo
-        uses: actions/checkout@master
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: tfsec
-        uses: tfsec/tfsec-sarif-action@main
-        with:
-          sarif_file: tfsec.sarif         
+      - name: Install Tfsec
+        run: |
+          curl -L -o tfsec https://github.com/tfsec/tfsec/releases/latest/download/tfsec-linux-amd64
+          chmod +x tfsec
+          sudo mv tfsec /usr/local/bin/
 
-      - name: Upload SARIF file
+      - name: Run Tfsec and Generate SARIF Output
+        id: tfsec
+        run: |
+          tfsec --format=sarif ./ > results.sarif
+
+      - name: Upload SARIF results
         uses: github/codeql-action/upload-sarif@v2
         with:
-          # Path to SARIF file relative to the root of the repository
-          sarif_file: tfsec.sarif    
+          sarif_file: results.sarif
